changes to smaller divs to solve overflow problem

--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ html{
     font-family: 'Comfortaa', cursive;
     font-weight: 500;
     scroll-behavior: smooth;
+    margin:0;
 }
 @mixin icon {
     width: 150px;
@@ -426,7 +427,7 @@ a{
         left: -10px;
         right: 0;
         height: 100%;
-        width: 100%;
+        width: 98%;
         opacity: 0;
         transition: .5s ease;
         background-color: $yellow;
