--- a/styleOut.css
+++ b/styleOut.css
@@ -3,6 +3,7 @@ html {
   font-family: "Comfortaa", cursive;
   font-weight: 500;
   scroll-behavior: smooth;
+  margin: 0;
 }
 
 * {
@@ -372,7 +373,7 @@ a {
   left: -10px;
   right: 0;
   height: 100%;
-  width: 100%;
+  width: 98%;
   opacity: 0;
   transition: 0.5s ease;
   background-color: #FFBC4D;
